# AiDome

./: .env.example  .gitignore  DEV_SETUP.md  Dockerfile  Makefile  README.md  __init__.py  database.py  docker-compose.yml  pyproject.toml
api/: deps.py
api/v1/: router.py
api/v1/endpoints/: auth.py  items.py  users.py
app/: README.md  event_bus.py  main copy.py  main.py  websocket_handler.py
body_godot/: icon.svg.import  main.gd  main.gd.uid  main.tscn  project.godot
config/: default_config.yaml  settings copy.py  settings.py
core/: README.md  __init__.py  decision_maker.py  exceptions.py  middleware.py  security.py  state_manager.py
docs/readme/: README.md.py  app-README.md.py  config-README.md.py  plugins-README.md.py  services-README.md.py
logs/: milestone-01-foundation-handshake.md  milestone-02-foundation-handshake.md  milestone-03-foundation-handshake.md
models/: base.py  item.py  user.py
plugins/: README.md
plugins/skills/my_weather_skill/: plugin.json  skill_code.py
requirements/: base.txt  dev.txt  prod.txt
schemas/: README.md  events.py  item.py  state.py  user.py
services/: README.md  item_service.py  llm_service.py  memory_service.py  service_provider.py  user_service.py
tests/: conftest.py  test_auth.py  test_users.py
utils/: helpers.py  validators.py
